<?xml version="1.0"?>
<package format="2">
  <name>contact_state_ros_bridge</name>
  <version>0.0.0</version>
  <description>The contact_state_ros_bridge package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild2</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_rtm_conversions</depend>
  <depend>eigen_conversions</depend>

  <depend>contact_state_msgs</depend>
</package>
