<?xml version="1.0"?>
<package format="2">
  <name>contact_state_rtc</name>
  <version>1.0.0</version>
  <description>The contact_state_rtc package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>rtmbuild2</depend>

</package>
