<?xml version="1.0"?>
<package format="2">
  <name>contact_state_rtc</name>
  <version>1.0.0</version>
  <description>The contact_state_rtc package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>rtmbuild2</depend>
  <depend>contact_state_msgs</depend>
  <depend>eigen_rtm_conversions</depend>
  <depend>cpp_filters</depend>
  <depend>ik_constraint2</depend>
  <depend>sr_inverse_kinematics_solver</depend>

</package>
